--- a/pkg-config/package.json
+++ b/pkg-config/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "jsonwebtoken": "^8.5.1",
     "jwk-to-pem": "^2.0.5"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
